# boxing_robot_ws

./: .gitignore  =4.6.0  =8.3.0  BOXBUNNY_CLAUDE_CODE_PROMPT.md  CLAUDE.md  README.md  cleanup_camera.sh  download_models.sh  environment.yml  requirements-dev.txt  requirements-jetson.txt  requirements.txt  test_realsense.py
action_prediction/: README.md  __init__.py  live_voxelflow_inference.py  run.py
action_prediction/configs/: rgbd_boxing_anticipation.py
action_prediction/lib/: checkpoint_utils.py  feature_buffer.py  fusion_model.py  inference_runtime.py  pose.py  prediction_utils.py  state_machine.py  voxel_features.py  voxel_model.py
action_prediction/tools/: __init__.py
config/: boxbunny.yaml  drills.yaml  fallback_tips.json  llm_models.yaml  llm_system_prompt.txt  ros_topics.yaml  sparring.yaml
data/: reaction_drill_sessions.csv
data/benchmarks/: population_norms.json
data/boxing_knowledge/: manifest.json
data/knowledge/: boxing_knowledge.txt
data/punch_sequences/: 1_Jab.json  2_Cross.json  3_Hook.json  4_R_Hook.json  5_L_UC.json  6_R_UC.json  Right_Hook.json
data/reaction_drill/: reaction_drill_20260206_172530_213458.csv  reaction_drill_20260206_173216_058415.csv  reaction_drill_20260206_173253_119279.csv  reaction_drill_20260206_173328_809072.csv  reaction_drill_20260206_173442_785438.csv  reaction_drill_20260206_173459_967413.csv  reaction_drill_20260206_173545_522040.csv  reaction_drill_20260206_174303_283929.csv  reaction_drill_20260206_174329_818566.csv  reaction_drill_20260206_174421_879408.csv  reaction_drill_20260206_175031_140344.csv  reaction_drill_20260206_175049_533284.csv  (+13 more)
docs/: architecture.md  customization.md  cv_pipeline.md  dashboard_and_llm.md  data_collection.md  gui_and_user_experience.md  sparring_and_training.md  teensy_simulator.md  testing_and_notebook.md
motor_ws/: arm_GUI_fair_3_runner.ipynb  initialisation_file.txt  run_arm_gui_fair_3_all.sh
notebooks/: boxbunny_all_in_one.ipynb  boxbunny_runner.ipynb  component_testing.ipynb  deployment.ipynb  ros_commands.ipynb  unit_tests.ipynb
scripts/: download_models.sh  generate_all_assets.sh  setup.sh
src/boxbunny_drills/: package.xml  setup.cfg  setup.py
src/boxbunny_drills/boxbunny_drills/: defence_drill.py  reaction_drill_manager.py  shadow_sparring_drill.py
src/boxbunny_drills/config/: drill.yaml  drill_definitions.yaml
src/boxbunny_drills/launch/: height_calibration.launch.py  imu_calibration.launch.py  punch_detection.launch.py  reaction_drill.launch.py
src/boxbunny_fusion/: package.xml  setup.cfg  setup.py
src/boxbunny_fusion/boxbunny_fusion/: punch_fusion_node.py
src/boxbunny_fusion/config/: fusion.yaml
src/boxbunny_gui/: package.xml  setup.cfg  setup.py
src/boxbunny_gui/assets/fonts/: FONT_README.txt
src/boxbunny_gui/boxbunny_gui/: __init__.py  app.py  db_helper.py  gui_bridge.py  gui_main.py  reaction_test_gui.py  session_tracker.py  theme.py
src/boxbunny_gui/boxbunny_gui/nav/: router.py
src/boxbunny_gui/boxbunny_gui/pages/auth/: account_picker_page.py  guest_assessment_page.py  pattern_lock_page.py  signup_page.py  startup_page.py
src/boxbunny_gui/boxbunny_gui/pages/coach/: station_page.py
src/boxbunny_gui/boxbunny_gui/pages/history/: history_page.py
src/boxbunny_gui/boxbunny_gui/pages/home/: home_coach.py  home_guest.py  home_individual.py
src/boxbunny_gui/boxbunny_gui/pages/performance/: performance_menu_page.py  power_test_page.py  reaction_test_page.py  stamina_test_page.py
src/boxbunny_gui/boxbunny_gui/pages/presets/: presets_page.py
src/boxbunny_gui/boxbunny_gui/pages/settings/: settings_page.py
src/boxbunny_gui/boxbunny_gui/pages/sparring/: sparring_config_page.py  sparring_results_page.py  sparring_session_page.py
src/boxbunny_gui/boxbunny_gui/pages/training/: combo_select_page.py  self_select_page.py  training_config_page.py  training_rest_page.py  training_results_page.py  training_session_page.py
src/boxbunny_gui/boxbunny_gui/widgets/: __init__.py  big_button.py  hold_tooltip.py  pattern_lock.py  preset_card.py  preset_overlay.py  punch_counter.py  stat_card.py  timer_display.py
src/boxbunny_gui/config/: gui.yaml
src/boxbunny_imu/: package.xml  setup.cfg  setup.py
src/boxbunny_imu/boxbunny_imu/: imu_input_selector.py  imu_punch_classifier.py  imu_punch_gui.py  mpu6050_node.py
src/boxbunny_imu/config/: imu.yaml
src/boxbunny_msgs/: CMakeLists.txt  __init__.py  package.xml  setup.cfg  setup.py
src/boxbunny_msgs/msg/: ActionPrediction.msg  ArmStrike.msg  CoachTip.msg  ConfirmedPunch.msg  DefenseEvent.msg  DrillDefinition.msg  DrillEvent.msg  DrillProgress.msg  GloveDetection.msg  GloveDetections.msg  HeightCommand.msg  IMUStatus.msg  ImuDebug.msg  ImuPunch.msg  MotorCommand.msg  NavCommand.msg  PadImpact.msg  PoseEstimate.msg  PunchDetection.msg  PunchEvent.msg  RobotCommand.msg  RoundControl.msg  SessionConfig.msg  SessionPunchSummary.msg  SessionState.msg  TrashTalk.msg  UserTracking.msg
src/boxbunny_msgs/srv/: CalibrateImuPunch.srv  EndSession.srv  GenerateLLM.srv  GenerateLlm.srv  SetImuMode.srv  StartDrill.srv  StartSession.srv  StartStopDrill.srv
tests/: conftest.py
tools/: demo_data_seeder.py  imu_simulator.py  llm_chat_gui.py  teensy_simulator.py
(+210 files in other folders)
