<?xml version="1.0"?>
<package format="3">
  <name>boxbunny_drills</name>
  <version>0.1.0</version>
  <description>Reaction drill manager and logging.</description>
  <maintainer email="you@example.com">BoxBunny</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>boxbunny_msgs</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
