<?xml version="1.0"?>
<package format="3">
  <name>boxbunny_fusion</name>
  <version>0.1.0</version>
  <description>Fusion nodes for combining vision and IMU signals.</description>
  <maintainer email="you@example.com">BoxBunny</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>boxbunny_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
