<?xml version="1.0"?>
<package format="3">
  <name>boxbunny_gui</name>
  <version>0.1.0</version>
  <description>PySide6 GUI for BoxBunny drills and telemetry.</description>
  <maintainer email="you@example.com">BoxBunny</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>boxbunny_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
